--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Генератор анкеты для ролевой.</title>
+  <title>Шаблон анкеты для ролевой.</title>
   <script>
    function printresult() {
     var text1 = document.getElementById('rawtext1').value;
